--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formspree/react": "^2.4.1",
     "@reduxjs/toolkit": "^1.9.0",
+    "axios": "^1.2.0",
     "bootstrap": "^5.2.3",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^18.2.0",
